[package]
name = "ultrafast-mcp-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Test utilities for UltraFast MCP"

[dependencies]
# Internal dependencies
ultrafast-mcp-core = { path = "../ultrafast-mcp-core", version = "=202506018.1.0-rc.2" }
ultrafast-mcp-server = { path = "../ultrafast-mcp-server", version = "=202506018.1.0-rc.2" }
ultrafast-mcp-client = { path = "../ultrafast-mcp-client", version = "=202506018.1.0-rc.2" }
ultrafast-mcp-transport = { path = "../ultrafast-mcp-transport", version = "=202506018.1.0-rc.2" }

# Testing dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true } 