[package]
name = "ultrafast-mcp-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Transport layer for UltraFast MCP"

[dependencies]
ultrafast-mcp-core = { path = "../ultrafast-mcp-core" }
ultrafast-mcp-auth = { path = "../ultrafast-mcp-auth" }
ultrafast-mcp-monitoring = { path = "../ultrafast-mcp-monitoring" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client/server
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async streams and random jitter
futures = "0.3"
rand = "0.8"

[features]
default = ["stdio"]
stdio = []
http = []
full = ["stdio", "http"]

[dev-dependencies]
tokio-test = "0.4"
