[package]
name = "ultrafast-mcp-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Transport layer for UltraFast MCP"

# docs.rs configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Internal dependencies
ultrafast-mcp-core = { path = "../ultrafast-mcp-core", version = "=202506018.1.0" }
ultrafast-mcp-auth = { path = "../ultrafast-mcp-auth", version = "=202506018.1.0" }
ultrafast-mcp-monitoring = { path = "../ultrafast-mcp-monitoring", version = "=202506018.1.0" }

# Core dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

# HTTP transport (optional)
axum = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

# Time (optional)
chrono = { workspace = true, optional = true }

# Random (required)
rand = { workspace = true }

[features]
# No default features for minimal footprint
default = []

# Core functionality (always available)
core = []

# Standard I/O transport (always available)
stdio = ["tokio/io-std"]

# HTTP transport support
http = ["axum", "reqwest", "tower-http", "axum-extra", "bytes"]

# Time handling
time = ["chrono"]

# All transport types
full = ["core", "stdio", "http", "time"]

[dev-dependencies]
tokio-test = { workspace = true }
