[package]
name = "ultrafast-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "High-performance, ergonomic Model Context Protocol (MCP) implementation in Rust"

# docs.rs configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Internal dependencies
ultrafast-mcp-core = { path = "../ultrafast-mcp-core", version = "=202506018.1.0-rc.2" }
ultrafast-mcp-server = { path = "../ultrafast-mcp-server", version = "=202506018.1.0-rc.2" }
ultrafast-mcp-client = { path = "../ultrafast-mcp-client", version = "=202506018.1.0-rc.2" }
ultrafast-mcp-transport = { path = "../ultrafast-mcp-transport", version = "=202506018.1.0-rc.2" }
ultrafast-mcp-auth = { path = "../ultrafast-mcp-auth", version = "=202506018.1.0-rc.2", optional = true }
ultrafast-mcp-monitoring = { path = "../ultrafast-mcp-monitoring", version = "=202506018.1.0-rc.2", optional = true }

# Core runtime dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# HTTP transport (optional)
axum = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

# Authentication (optional)
oauth2 = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
url = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

# UUID generation
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

# JSON Schema
schemars = { workspace = true }

# Monitoring and observability (optional)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
sysinfo = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

[features]
# No default features for minimal footprint
default = []

# Core functionality (always available)
core = []

# Transport features
stdio = ["ultrafast-mcp-transport/stdio"]
http = ["ultrafast-mcp-transport/http", "ultrafast-mcp-server/http", "ultrafast-mcp-client/http"]

# Authentication features
oauth = ["ultrafast-mcp-auth"]

# Monitoring and observability
monitoring = ["ultrafast-mcp-monitoring"]
monitoring-http = ["ultrafast-mcp-monitoring/http"]
monitoring-jaeger = ["ultrafast-mcp-monitoring/jaeger"]
monitoring-otlp = ["ultrafast-mcp-monitoring/otlp"]
monitoring-console = ["ultrafast-mcp-monitoring/console"]

# Convenience combinations
http-with-auth = ["http", "oauth"]
monitoring-full = ["ultrafast-mcp-monitoring/all"]

# Minimal feature set
minimal = ["core", "stdio"]

# All features enabled
full = [
    "core",
    "stdio", 
    "http",
    "oauth",
    "monitoring-full"
] 