[package]
name = "ultrafast-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "High-performance, ergonomic Model Context Protocol (MCP) implementation in Rust"

# docs.rs configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Internal dependencies
ultrafast-mcp-core = { path = "../ultrafast-mcp-core", optional = true }
ultrafast-mcp-server = { path = "../ultrafast-mcp-server", optional = true }
ultrafast-mcp-client = { path = "../ultrafast-mcp-client", optional = true }
ultrafast-mcp-transport = { path = "../ultrafast-mcp-transport", optional = true }
ultrafast-mcp-auth = { path = "../ultrafast-mcp-auth", optional = true }
ultrafast-mcp-monitoring = { path = "../ultrafast-mcp-monitoring", optional = true }

# Core runtime dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }

[features]
# No default features for minimal footprint
default = []

# Core functionality (always available)
core = [
    "ultrafast-mcp-core",
    "ultrafast-mcp-server/core", 
    "ultrafast-mcp-client/core"
]

# Transport features
stdio = [
    "core",
    "ultrafast-mcp-transport/stdio",
    "ultrafast-mcp-server/core",
    "ultrafast-mcp-client/core"
]

http = [
    "core",
    "ultrafast-mcp-transport/http", 
    "ultrafast-mcp-transport/stdio",
    "ultrafast-mcp-server/http", 
    "ultrafast-mcp-client/http"
]

# Authentication features
oauth = ["core", "ultrafast-mcp-auth/oauth"]

# Monitoring and observability
monitoring = ["core", "ultrafast-mcp-monitoring/core"]
monitoring-http = ["core", "ultrafast-mcp-monitoring/http"]
monitoring-jaeger = ["core", "ultrafast-mcp-monitoring/jaeger"]
monitoring-otlp = ["core", "ultrafast-mcp-monitoring/otlp"]
monitoring-console = ["core", "ultrafast-mcp-monitoring/console"]

# Convenience combinations
http-with-auth = ["core", "stdio", "http", "oauth"]
monitoring-full = ["core", "ultrafast-mcp-monitoring/all"]

# Minimal feature set (core + stdio for basic functionality)
minimal = ["core", "stdio"]

# All features enabled
full = [
    "core",
    "stdio", 
    "http",
    "oauth",
    "monitoring-full"
] 