[package]
name = "basic-echo-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"
doc = false

[[bin]]
name = "client"
path = "src/client.rs"
doc = false

[[bin]]
name = "basic-echo-server"
path = "src/basic-echo-server.rs"
doc = false

[dependencies]
ultrafast-mcp = { path = "../../crates/ultrafast-mcp", features = ["http"] }
ultrafast-mcp-transport = { path = "../../crates/ultrafast-mcp-transport", features = ["http"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true } 