[package]
name = "file-operations-example"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "file-ops-server"
path = "src/server.rs"
doc = false

[[bin]]
name = "file-ops-client"
path = "src/client.rs"
doc = false

[dependencies]
ultrafast-mcp = { path = "../../crates/ultrafast-mcp", features = ["http"] }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true } 