[package]
name = "everything-server-streamable-http"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description.workspace = true

[features]
http = ["ultrafast-mcp/http"]
oauth = ["ultrafast-mcp/oauth"]

[dependencies]
ultrafast-mcp = { path = "../../crates/ultrafast-mcp", features = ["http-with-auth", "monitoring-full"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
tracing-subscriber = { workspace = true }

[[bin]]
name = "everything-server"
path = "src/main.rs"

[[bin]]
name = "everything-server-client"
path = "src/everything-server-client.rs"
