[package]
name = "advanced-features-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "advanced-server"
path = "src/server.rs"
doc = false

[[bin]]
name = "advanced-client"
path = "src/client.rs"
doc = false

[dependencies]
ultrafast-mcp = { path = "../../crates/ultrafast-mcp" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8" 