[package]
name = "advanced-features-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "advanced-server"
path = "src/server.rs"
doc = false

[[bin]]
name = "advanced-client"
path = "src/client.rs"
doc = false

[dependencies]
ultrafast-mcp = { path = "../../crates/ultrafast-mcp" }
ultrafast-mcp-transport = { path = "../../crates/ultrafast-mcp-transport" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true } 