[package]
name = "advanced-features"
version = "0.1.0"
edition = "2021"

[dependencies]
ultrafast-mcp = { path = "../../crates/ultrafast-mcp", features = ["http", "oauth", "monitoring"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client/server
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Async traits
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Error handling
anyhow = "1.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs" 