[package]
name = "authentication-example"
version = "0.1.0"
edition = "2021"
description = "UltraFast MCP Authentication Example"
authors = ["UltraFast MCP Team"]
license = "MIT OR Apache-2.0"

[dependencies]
ultrafast-mcp = { path = "../../crates/ultrafast-mcp", features = ["oauth"] }
ultrafast-mcp-client = { path = "../../crates/ultrafast-mcp-client" }
ultrafast-mcp-server = { path = "../../crates/ultrafast-mcp-server" }
ultrafast-mcp-transport = { path = "../../crates/ultrafast-mcp-transport" }
ultrafast-mcp-auth = { path = "../../crates/ultrafast-mcp-auth" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "authentication-example"
path = "src/main.rs" 