[package]
name = "authentication-example"
version = "0.1.0"
edition = "2024"
description = "UltraFast MCP Authentication Example"
authors = ["UltraFast MCP Team"]
license = "MIT OR Apache-2.0"

[dependencies]
ultrafast-mcp = { path = "../../crates/ultrafast-mcp", features = ["oauth"] }
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "authentication-example"
path = "src/main.rs" 

[features]
http = ["ultrafast-mcp/http"]
oauth = ["ultrafast-mcp/oauth"] 
