[package]
name = "lifecycle-compliance-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ultrafast-mcp = { path = "../../crates/ultrafast-mcp" }
ultrafast-mcp-core = { path = "../../crates/ultrafast-mcp-core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
async-trait = "0.1" 